# copit

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  copit.toml  index.html  install.sh  mkdocs.yml  pyproject.toml  release-plz.toml  sitemap.xml  uninstall.sh  versions.json
.github/workflows/: build-binaries.yml  ci.yml  docs.yml  release-plz.yml  release.yml
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/changelog/: index.html
0.2.0/commands/: index.html
0.2.0/configuration/: index.html
0.2.0/contributing/: index.html
0.2.0/getting-started/: index.html
0.2.0/search/: search_index.json
0.2.1/: 404.html  index.html  sitemap.xml
0.2.1/changelog/: index.html
0.2.1/commands/: index.html
0.2.1/configuration/: index.html
0.2.1/contributing/: index.html
0.2.1/getting-started/: index.html
0.2.1/search/: search_index.json
0.2.2/: 404.html  index.html  sitemap.xml
0.2.2/changelog/: index.html
0.2.2/commands/: index.html
0.2.2/configuration/: index.html
0.2.2/contributing/: index.html
0.2.2/getting-started/: index.html
0.2.2/search/: search_index.json
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/changelog/: index.html
0.3.0/commands/: index.html
0.3.0/configuration/: index.html
0.3.0/contributing/: index.html
0.3.0/getting-started/: index.html
0.3.0/search/: search_index.json
changelog/: index.html
commands/: index.html
configuration/: index.html
contributing/: index.html
docs/: commands.md  configuration.md  getting-started.md  index.md
examples/: generate_cli_docs.rs
getting-started/: index.html
python/copit/: __init__.py
scripts/: release.sh
search/: search_index.json
src/: cli.rs  config.rs  lib.rs  main.rs
src/commands/: add.rs  common.rs  init.rs  licenses_sync.rs  mod.rs  remove.rs  sync.rs  update.rs  update_all.rs
src/sources/: github.rs  http.rs  mod.rs  zip.rs
tests/cli/: add.rs  init.rs  licenses_sync.rs  main.rs  remove.rs  sync.rs  update.rs  update_all.rs
