[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "copit"
dynamic = ["version"]
description = "Copy reusable source code from GitHub repos, HTTP URLs, and ZIP archives into your project"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
strip = true

[project.urls]
Documentation = "https://huynguyengl99.github.io/copit/"
Repository = "https://github.com/huynguyengl99/copit"
Changelog = "https://github.com/huynguyengl99/copit/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "prek",
]
docs = [
    "mkdocs-material",
    "mkdocs>=1.6,<2",
]
